--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <head>
     <title>lecture</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
-
+  <h2>Hello, Dev!</h2>
 
 
 <body>
